Updated the logo to be a little photoshop illustration instead of using one from the internet. The redundant sending of userID back and forth between activities was removed, so they now use the current user from authDb

--- a/app/src/main/res/layout/activity_garden_save.xml
+++ b/app/src/main/res/layout/activity_garden_save.xml
@@ -72,7 +72,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/mainToolBar"
-            app:srcCompat="@drawable/little_seedling" />
+            app:srcCompat="@drawable/new_seedling"
+            android:contentDescription="@string/small_seedling"
+            />
 
         <TableLayout
             android:id="@+id/tableLayout2"
