--- a/app/src/main/res/layout/activity_individual_plant.xml
+++ b/app/src/main/res/layout/activity_individual_plant.xml
@@ -40,49 +40,39 @@
              />
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_top"
-        app:cardBackgroundColor="@color/lightGray"
-        app:cardCornerRadius="5dp"
-        app:contentPadding="@dimen/margin_24"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mainToolBar">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/adding_image_height"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/little_seedling" />
-
-    </androidx.cardview.widget.CardView>
-
-<!--    <com.google.android.material.imageview.ShapeableImageView-->
-<!--        android:id="@+id/image"-->
-<!--        style="@style/Widget.App.ShapeableImageView"-->
-<!--        android:layout_width="@dimen/adding_image_width"-->
-<!--        android:layout_height="@dimen/adding_image_height"-->
-<!--        app:layout_constraintEnd_toEndOf="@+id/linearLayout"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/mainToolBar"-->
-<!--        app:srcCompat="@drawable/little_seedling" />-->
-
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_top"
         android:gravity="center"
         android:orientation="vertical"
+        android:layout_marginTop="@dimen/margin_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cardView">
+        app:layout_constraintTop_toBottomOf="@+id/mainToolBar">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_24"
+            android:layout_marginBottom="@dimen/margin_24"
+            app:cardBackgroundColor="@color/lightGray"
+            app:cardCornerRadius="5dp"
+            app:contentPadding="@dimen/margin_24"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <ImageView
+                android:id="@+id/plantImage"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/adding_image_height"
+                android:adjustViewBounds="true"
+                android:contentDescription="@string/small_seedling"
+                android:scaleType="fitCenter"
+                app:srcCompat="@drawable/new_seedling" />
+
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/textViewPlantType"
@@ -222,9 +212,6 @@
                     android:text="@string/unavailable" />
             </TableRow>
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
         </TableLayout>
 
     </LinearLayout>
